syntax = "proto3";

package gov.llnl.ernie.raven;

option java_package = "gov.llnl.ernie.raven";
option java_outer_classname = "LaneProtos";

// Response "Error"
message LaneErrorResponse
{
    string message = 1;
}

message LaneConfigureRequest
{
    int32 site_id = 1;
    int32 lane_id = 2;
    bool collimated = 3;
    double lane_width = 4;
    int32 intervals = 5;
    int32 holdin = 6;
    map<string, string> properties = 7;
}

message LaneConfigureResponse
{
    string version = 1; // version string (ie. "4.0.0")
    map<string, string> md5_map = 2;  // Map of MD5 of the configuration files
}

message ProcessScanDataRequest
{
    int32 scan_id = 1;
    string scan_data = 2;
}

message ProcessScanDataResponse
{
    int32 scan_id = 1;  // same as the request for auditing
    string xml_data = 2;
}
